I created a contact form and validated it with javascript

--- a/chika.html
+++ b/chika.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Ogbu Casmir Chika">
     <meta name="description" content="My CV">
+    <script src="chika.js"></script>
     <link rel="stylesheet" type="text/css" href="chika.css">
     <title>MY HNG-HTML TASK - chikadibia</title>
 </head>
@@ -253,6 +254,20 @@
         <p align="center"><a href="#OCC">Back to Top</a></p>
         <hr />
     </div>
+    <hr /> <br />
+    <form name="contactForm" action="#">
+        <h3>Get In Touch </h3>
+        Name:<br />
+        <input type="text" name="name" placeholder="Name"> <br /> Email:
+        <br />
+        <input type="email" name="email" placeholder="Email"> <br /> Title: <br />
+        <input type="text" name="title" placeholder="Title"> <br /> Message:
+        <br />
+        <input type="text" name="message" Placeholder="Message"> <br />
+        <input id="btn" type="button" name="submit" value="Submit" onclick="validateForm()">
+    </form>
+    <hr />
+    <br /> <br />
     <!--A footer about this page's author-->
     <footer align="center" title="I was done with a <footer> tag">A Chikadibia's Work for Startng-HNG6.0 Pre-Internship. <br /> August 23, 2019.</footer>
 </body>
